Bug 27123 - [i915 bisected] rendering makes X crash
Summary: [i915 bisected] rendering makes X crash
Status: VERIFIED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high critical
Assignee: Carl Worth
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-16 20:21 UTC by zhao jian
Modified: 2010-03-19 01:47 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
xorg.0.log (21.67 KB, text/plain)
2010-03-16 20:21 UTC, zhao jian
no flags Details

Description zhao jian 2010-03-16 20:21:38 UTC
Created attachment 34135 [details]
xorg.0.log

System Environment:
--------------------------
Platform:       945GM
Libdrm:         (master)df7157fe2e28796ae1f6d938b850e08c8e1d382d
Mesa:           (master)e0ce4a4a0994211ead8e5a77cccdd2a084e8a288
Xserver:                (master)67a8c659f25218904bae64aac6e98e326c90330b
Xf86_video_intel:       (master)d6b7f96fde1add92fd11f5a75869ae6fc688bf77
Kernel_unstable:  (drm-intel-next)338d762fc2dc2c1493813123fc4cea998bb3e683

Bug detailed description:
-------------------------
When test some cases involes xrender will crash X with following infomation. It exists on both 945GM and 945GME. I find it was caused by commit d6b7f96fde1add92fd11f5a75869ae6fc688bf77 in Xf86_video_intel. Maybe it lacks a MI_NOOP before ADVANCE_BATCH(). 

Fatal server error:
i915_emit_composite_setup: ADVANCE_BATCH: under-used allocation 100/104


Please consult the The X.Org Foundation support
         at http://wiki.x.org
 for help.
Please also check the log file at "/opt/X11R7/var/log/Xorg.0.log" for additional information.

xterm:  fatal IO error 11 (Resource temporarily unavailable) or KillClient on X server ":0.0"

commit d6b7f96fde1add92fd11f5a75869ae6fc688bf77
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat Mar 6 15:49:04 2010 +0000

    Fill alpha on xrgb images.

    Do not try to fixup the alpha in the ff/shaders as this has the
    side-effect of overriding the alpha value of the border color, causing
    images to be padded with black rather than transparent. This can
    generate large and obnoxious visual artefacts.

    Fixes:

      Bug 17933 - x8r8g8b8 doesn't sample alpha=0 outside surface bounds
      http://bugs.freedesktop.org/show_bug.cgi?id=17933

    and many related cairo test suite failures.

    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 1 zhao jian 2010-03-16 23:27:30 UTC
This bug can be reproduced by run some x11perf cases. e.g. x11perf -rgb10text
Comment 2 Chris Wilson 2010-03-17 02:22:12 UTC
commit 31d5f84bb4416ef92abd97264d52cdab7a184687
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Mar 17 09:11:05 2010 +0000

    i915: Correct preamble for emit_composite
    
    Fixes:
    http://bugs.freedesktop.org/show_bug.cgi?id=27123
    
    Fatal server error:
    i915_emit_composite_setup: ADVANCE_BATCH: under-used allocation 100/104
    
    Introduced with commit d6b7f96fde1add92fd11f5a75869ae6fc688bf77.
Comment 3 zhao jian 2010-03-19 01:47:55 UTC
It works well. verified. 


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.