i915: Correct preamble for emit_composite

Fixes:
http://bugs.freedesktop.org/show_bug.cgi?id=27123

Fatal server error:
i915_emit_composite_setup: ADVANCE_BATCH: under-used allocation 100/104

Introduced with commit d6b7f96fde1add92fd11f5a75869ae6fc688bf77.

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>